--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
+    <script src="mainpagejs.js"></script>
 
     <div class="nav-bar">
-        <ul class="nav flex-column">
+        <ul class="nav flex-column padding-2">
             <li class="nav-item">
                 <a class="sidebar-link" aria-current="page" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Active</a>
             </li>
