--- a/templates/mainpage/mainpage.html
+++ b/templates/mainpage/mainpage.html
@@ -13,7 +13,16 @@
 
 <body>
     <script src="mainpagejs.js"></script>
+    <div class="log-nav">
+        <ul>
+            <li>
 
+            </li>
+            <li>
+
+            </li>
+        </ul>
+    </div>
     <div class="nav-bar">
         <ul class="nav flex-column padding-2">
             <li class="nav-item">
