Added mainpage.html refactor css

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "mainpage/base.html" %}
+{% block content %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}">
 
-</body>
-</html>
+{% endblock %}
