--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -2,21 +2,56 @@
 <html lang="en">
 
 <head>
+    <script src="'static/mainpagejs.js'"></script>
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
 
 
 </head>
 
 <body>
+
+    <div id="draggable" class="bg-blue-500 w-20 h-20 absolute cursor-move">Task 1
+    </div>
     <h2 class="text-center ">HELLO</h2>
     <div class="log-nav ">
-        <a class="login-a logn">Login</a>
-        <a class="reg-a logn">Register</a>
+        <a class="login-a logn" href="/login">Login</a>
+        <a class="reg-a logn" href="/signup">Sign Up</a>
     </div>
-</body>
+  {% block content %}{% endblock %}
 
+</body>
+<script>
+var draggable = document.getElementById('draggable');
+draggable.onmousedown = function(event) {
+    draggable.style.position = 'absolute';
+    draggable.style.zIndex = 1000;
+
+    function moveAt(pageX, pageY) {
+        draggable.style.left = pageX - draggable.offsetWidth / 2 + 'px';
+        draggable.style.top = pageY - draggable.offsetHeight / 2 + 'px';
+    }
+
+    moveAt(event.pageX, event.pageY);
+
+    function onMouseMove(event) {
+        moveAt(event.pageX, event.pageY);
+    }
+
+    document.addEventListener('mousemove', onMouseMove);
+
+    draggable.onmouseup = function() {
+        document.removeEventListener('mousemove', onMouseMove);
+        draggable.onmouseup = null;
+    };
+};
+
+draggable.ondragstart = function() {
+    return false;
+};
+
+</script>
 </html>
