--- a/static/styles/signup.css
+++ b/static/styles/signup.css
@@ -1,12 +1,12 @@
 body {
-    background-color: rgb(255, 235, 182)
+    background-color: rgb(240, 235, 216)
 }
 
 .logincontainer {
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: rgb(243, 223, 120);
+    background-color: rgb(116, 140, 171);
     padding: 30px;
     justify-content: left;
     right: 50%;
@@ -14,7 +14,7 @@ body {
     width: 15%;
     height: 70%;
     border-radius: 15px;
-    box-shadow: 5px 5px seashell;
+    box-shadow: 5px 5px rgb(62, 92, 118);
 }
 
 .titleh {}
