--- a/templates/login/baselogin.html
+++ b/templates/login/baselogin.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width">
+
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}">
