--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width">
+
     <script src="'static/mainpagejs.js'"></script>
     <meta charset="UTF-8">
     <title>Title</title>
