--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -26,6 +26,32 @@
 
 </body>
 <script>
+    function addItemToDatabase() {
+        const data = {
+            name: 'New Item',
+            description: 'This is a new item to be added to the database.'
+        };
+
+        fetch('/add-item/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': getCookie('csrftoken')
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => {
+                if (response.ok) {
+                    console.log('Item added to the database successfully!');
+                } else {
+                    console.error('Failed to add item to the database.');
+                }
+            })
+            .catch(error => {
+                console.error('Error adding item:', error);
+            });
+    }
+    const sqlite3 = req
     var draggableElements = document.getElementsByClassName('draggable');
     let initialX, initialY, currentElement;
 
@@ -56,12 +82,6 @@
         });
     }
 
-    // Variables to store initial mouse position and the element being dragged
-
-    // Add event listeners to enable dragging for each draggable element
-
-
-    // Function to start dragging the element
     function startDragging(event) {
         currentElement = this;
 
