--- a/templates/mainpage/mainpage.html
+++ b/templates/mainpage/mainpage.html
@@ -1,6 +1,3 @@
-
-{% extends "mainpage/base.html" %}
-{% block content %}
+ {% extends "mainpage/base.html" %} {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
-
-{% endblock %}
+<button onclick="addItemToDatabase()">Add Item</button> {% endblock %}
