--- a/templates/mainpage/mainpage.html
+++ b/templates/mainpage/mainpage.html
@@ -1,3 +1,2 @@
  {% extends "mainpage/base.html" %} {% block content %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
-<button onclick="addItemToDatabase()">Add Item</button> {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}"> {% endblock %}
