--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,29 +1,27 @@
- {% extends "login/baselogin.html" %} {% block content %}
+{% extends "login/baselogin.html" %} {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}">
-<div class="allpage">
-    <h1 class="titleh">{{title}}</h1>
-    <div class="logincontainer">
-        <form action="" method="post">
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.email.label }}<br> {{ form.email(class="form-control", type="email") }}<br> {% for error in form.email.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-                {% endfor %}
-            </p>
-            <p>
-                {{ form.password.label }}<br> {{ form.password(class="form-control", type="password") }}<br> {% for error in form.password.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-                {% endfor %}
-            </p>
-            <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-            <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-            <div>{{ message }}</div>
-        </form>
-    </div>
+<h1 class="text-center">{{ title }}</h1>
+<div class="logincontainer">
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.email.label }}<br> {{ form.email(class="form-control", type="email") }}<br> {% for error in form.email.errors %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+            {% endfor %}
+
+        <p>
+            {{ form.password.label }}<br> {{ form.password(class="form-control", type="password") }}<br> {% for error in form.password.errors %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+            {% endfor %}
+
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <div>{{ message }}</div>
+    </form>
 </div>
 
 {% endblock %}
