--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -6,23 +6,32 @@
 
     <script src="'static/mainpagejs.js'"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
-
-
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
+    {% block content %}{% endblock %}
 </head>
 
 <body>
 
     <h2 class="text-center ">HELLO</h2>
-    <div class="log-nav ">
-        <a class="login-a logn" href="/login">Login</a>
-        <a class="reg-a logn" href="/signup">Sign Up</a>
-    </div>
+    {% if current_user.is_authenticated %}
+        <div class="log-nav">
+            <div class="cur_user">
+                <p class="cur_login">{{ current_user.nickname }}</p>
+                <p class="cur_email">{{ current_user.email }}</p>
+            </div>
+            <a class="login-a logn" href="/logout">Logout</a>
+        </div>
+    {% else %}
+        <div class="log-nav">
+            <a class="login-a logn" href="/login">Login</a>
+            <a class="login-a logn" href="/signup">Sign Up</a>
+        </div>
+    {% endif %}
     <div class="create"><button id="create_btn" class="create_btn">+</button></div>
-    {% block content %}{% endblock %}
+
 
 </body>
 <script>
