--- a/templates/mainpage/mainpage.html
+++ b/templates/mainpage/mainpage.html
@@ -1,4 +1,4 @@
 {% extends "mainpage/base.html" %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpagecs.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
 {% endblock %}
