--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -4,96 +4,42 @@
 <head>
     <meta name="viewport" content="width=device-width">
 
-    <script src="'static/mainpagejs.js'"></script>
+    <script src="static/mainpagejs.js"></script>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% block content %}{% endblock %}
 </head>
 
 <body>
 
-    <h2 class="text-center ">HELLO</h2>
+    <h2 class="text-center">HELLO</h2>
+    <button id="menuBtn">CREATE</button>
+    <div class="fixed inset-0 z-10 bg-white menu" id="menu">
+    </div>
     {% if current_user.is_authenticated %}
-        <div class="log-nav">
-            <div class="cur_user">
-                <p class="cur_login">{{ current_user.nickname }}</p>
-                <p class="cur_email">{{ current_user.email }}</p>
-            </div>
-            <a class="login-a logn" href="/logout">Logout</a>
-        </div>
+
+    <div class="current_user">
+        <p class="cur_login">{{ current_user.nickname }}#{{ current_user.id }}</p>
+        <p class="cur_email">{{ current_user.email }}</p>
+        <a class="login-a logn" href="/logout">Logout</a>
+        <div class="load"><button id="load_btn" class="load_btn" onclick="loadCards()">Load cards</button></div>
+    </div>
+    <p id="cur_id" class="transparent-1">{{ current_user.id }}</p>
+
     {% else %}
-        <div class="log-nav">
-            <a class="login-a logn" href="/login">Login</a>
-            <a class="login-a logn" href="/signup">Sign Up</a>
-        </div>
+    <div class="log-nav">
+        <a class="login-a logn" href="/login">Login</a>
+        <a class="login-a logn" href="/signup">Sign Up</a>
+    </div>
     {% endif %}
-    <div class="create"><button id="create_btn" class="create_btn">+</button></div>
+    <div class="making"></div>
+    <div class="create" id="mncrbtn"><button id="create_btn" class="create_btn" onclick="create_note">+</button></div>
 
 
 </body>
-<script>
-    var draggableElements = document.getElementsByClassName('draggable');
-    let initialX, initialY, currentElement;
-
-    document.getElementById("create_btn").onclick = function() {
-        create_note()
-    }
-    Array.from(draggableElements).forEach(element => {
-        element.addEventListener('mousedown', startDragging);
-        element.addEventListener('mouseup', stopDragging);
-    });
-
-    function create_note() {
-        let NoteElemnet = document.createElement('div');
-        NoteElemnet.classList.add('draggable');
-        NoteElemnet.classList.add('bg-blue-500');
-        NoteElemnet.classList.add('absolute');
-        NoteElemnet.classList.add('cursor-move');
-        NoteElemnet.classList.add('zind');
-
-
-        NoteElemnet.textContent = "2task";
-        document.body.append(NoteElemnet);
-        var draggableElements = document.getElementsByClassName('draggable');
-        let initialX, initialY, currentElement;
-        Array.from(draggableElements).forEach(element => {
-            element.addEventListener('mousedown', startDragging);
-            element.addEventListener('mouseup', stopDragging);
-        });
-    }
-
-    // Variables to store initial mouse position and the element being dragged
-
-    // Add event listeners to enable dragging for each draggable element
-
-
-    // Function to start dragging the element
-    function startDragging(event) {
-        currentElement = this;
-
-        initialX = event.clientX - currentElement.offsetLeft;
-        initialY = event.clientY - currentElement.offsetTop;
-        document.addEventListener('mousemove', dragging);
-    }
-
-    // Function to stop dragging the element
-    function stopDragging() {
-        document.removeEventListener('mousemove', dragging);
-        currentElement = null;
-    }
-
-    // Function to update the position of the element while dragging
-    function dragging(event) {
-        if (currentElement) {
-            const newX = event.clientX - initialX;
-            const newY = event.clientY - initialY;
-            currentElement.style.left = newX + 'px';
-            currentElement.style.top = newY + 'px';
-        }
-    }
-</script>
 
 </html>
