--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -37,7 +37,7 @@
     </div>
     {% endif %}
     <div class="making"></div>
-    <div class="create" id="mncrbtn"><button id="create_btn" class="create_btn" onclick="create_note">+</button></div>
+    <div class="create" id="mncrbtn"><button id="create_btn" class="create_btn" onclick="create_note()">+</button></div>
 
 
 </body>
