--- a/templates/mainpage/base.html
+++ b/templates/mainpage/base.html
@@ -16,22 +16,21 @@
 
 <body>
 
-    <h2 class="text-center">HELLO</h2>
-    <button id="menuBtn">CREATE</button>
+    <h2 class="text-center">ToDoGeniusX</h2>
     <div class="fixed inset-0 z-10 bg-white menu" id="menu">
     </div>
 
     {% if current_user.is_authenticated %}
-        <div class="current_user">
-            <div class="user_header">
-                <img src="././static/profile_imgs/{{ current_user.id }}.png" alt="avatar" class="avatar">
-                <a class="cur_login" href="/profile">{{ current_user.nickname }}#{{ current_user.id }}</a>
-            </div>
-            <a class="cur_email" href="/profile">{{ current_user.email }}</a>
-            <a class="login-a logn" href="/logout">Logout</a>
-            <div class="load"><button id="load_btn" class="load_btn" onclick="loadCards()">Load cards</button></div>
+    <div class="current_user">
+        <div class="user_header">
+            <img src="././static/profile_imgs/{{ current_user.id }}.png" alt="avatar" class="avatar">
+            <a class="cur_login" href="/profile">{{ current_user.nickname }}#{{ current_user.id }}</a>
         </div>
-        <p id="cur_id" class="transparent-1">{{ current_user.id }}</p>
+        <a class="cur_email" href="/profile">{{ current_user.email }}</a>
+        <a class="login-a logn" href="/logout">Logout</a>
+        <div class="load"><button id="load_btn" class="load_btn" onclick="loadCards()">Load cards</button></div>
+    </div>
+    <p id="cur_id" class="transparent-1">{{ current_user.id }}</p>
 
     {% else %}
     <div class="log-nav">
@@ -41,6 +40,10 @@
     {% endif %}
 
     <div class="making"></div>
+    <div class="not-setting">
+        <p class="note-name-text">Note name</p>
+        <input class="note-name" id="inp-note"></input>
+    </div>
     <div class="create" id="mncrbtn"><button id="create_btn" class="create_btn" onclick="create_note()">+</button></div>
 
 
